fix: style search btn not working on safari mobile

--- a/eComerce/client/src/components/Search/Search.scss
+++ b/eComerce/client/src/components/Search/Search.scss
@@ -33,9 +33,8 @@ $cubic-bezier: cubic-bezier(0, 0.11, 0.35, 2);
     background-color: $bg-color;
     padding-right: 20px;
     color: $font-color;
-  z-index: 999;
-  cursor: pointer;
-
+    z-index: 10;
+    cursor: pointer;
 
     &::placeholder {
       color: $font-color;
@@ -46,12 +45,11 @@ $cubic-bezier: cubic-bezier(0, 0.11, 0.35, 2);
     &:focus {
       border: 1px solid $border-color;
       width: 175px;
-      
+
       border-radius: 0px;
       background-color: transparent;
       border-bottom: 1px solid $border-color;
       transition: all $transition-time $cubic-bezier;
-     
 
       @media (max-width: 768px) {
         width: 79dvw;
@@ -76,6 +74,8 @@ $cubic-bezier: cubic-bezier(0, 0.11, 0.35, 2);
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
+
 
     &:focus ~ .input-search {
       width: 175px;
